--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html class="no-js">
+  <head>
 
-	{% if page.title != 'index' %}
-	    {% include head.html %}
-	{% else %}
-		{% include index_head.html %}
-	{% endif %}
+    {% include head.html %}
+
+  </head>
+  <body>
 
 
-<body id="page-top" class="landing-page">
+    {% include header.html %}
 
-	{% if page.title != 'index' %}
-	    {% include header.html %}
-	{% endif %}
 
     {{ content }}
 
-	{% if page.title != 'index' %}
-	    {% include footer.html %}
-	{% else %}
-		{% include index_footer.html %}
-	{% endif %}
 
-</body>
+
+
+
+
+
+
+
+    {% include footer.html %}
+
+    </body>
 </html>
