--- a/css/price-style.css
+++ b/css/price-style.css
@@ -42,7 +42,7 @@ margin-top: 1em;
 }
 .wrap{
 	margin: 0 auto;
-	width: 80%;
+	width: 70%;
 }
 body a{
 	transition:0.5s all ease;
@@ -126,7 +126,7 @@ border-radius: 0.7em;
 	color:#fff;
 }
 .price-value,.price-value.two,.price-value.three {
-	background: #512884;
+	background: #339933;
 	padding: 2.8em 1.8em 2em;
 	border-bottom:2px solid#ffd500;
 	border-top-left-radius:0.7em;
@@ -194,11 +194,11 @@ padding: 11px 0;
 	-webkit-border-top-right-radius: 0.7em;
 }
 .sale-box span.on_sale{
-font-size: 14px;
+font-size: 16px;
 color: #444;
-background: #ffd400;
+background: #339933;
 text-transform: uppercase;
-padding: 58px 35px 17px 40px;
+padding: 58px 20px 17px 40px;
 width: 281px;
 text-align: center;
 display: block;
@@ -220,7 +220,7 @@ box-shadow: 3px -4px 13px 3px rgba(0,0,0,0.75);
 	background:#05AEA7;
 }
 .pricing-grid1 ul li a,.pricing-grid2 ul li a,.pricing-grid3 ul li a{
-	color: #C7C4C4;
+	color: #5c5757;
 	font-size: 15px;
 	text-align: center;
 	display: block;
@@ -232,7 +232,7 @@ box-shadow: 3px -4px 13px 3px rgba(0,0,0,0.75);
 	background:#f4f4f4;
 }
 .pricing-grid1:hover div.price-bg ul li a,.pricing-grid1:hover div.price-value h3 a{
- color:#512884;
+ color:#339933;
 }
 .pricing-grid2:hover div.price-bg ul li a,.pricing-grid2:hover div.price-value h3 a{
  color:#fa6e6f;
@@ -252,7 +252,7 @@ box-shadow: 3px -4px 13px 3px rgba(0,0,0,0.75);
 .cart1,.cart2,.cart3{
 	padding: 2.7em 0em 2.7em;
 	display: block;
-	border-bottom: 2px solid#ffd500;
+	border-bottom: 2px solid#339933;
 }
 .cart2{
 border-bottom: 2px solid#f96d70;
@@ -266,7 +266,7 @@ border-bottom: 2px solid#04dbdd;
 	font-weight: 500;
 	padding: 0.8em 2em;
 	text-decoration: none;
-	background: #f7d30b;
+	background: #339933;
 	text-transform:uppercase;
 	-webkit-appearance:none;
 	border-radius:1em;
